--- a/app/www/templates/loggedIn.html
+++ b/app/www/templates/loggedIn.html
@@ -3,21 +3,21 @@
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top">
+<ion-tabs class="tabs-dark tabs-icon-only">
 
-  <ion-tab title="Dashboard" icon="icon ion-home" ui-sref="loggedIn.dashboard">
+  <ion-tab icon="icon ion-home" ui-sref="loggedIn.dashboard">
     <ion-nav-view name="dashboard"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Comrades" icon="icon ion-person" ui-sref="loggedIn.comrades">
+  <ion-tab icon="icon ion-person" ui-sref="loggedIn.comrades">
     <ion-nav-view name="comrades"></ion-nav-view>
   </ion-tab>
     
-  <ion-tab title="Messages" icon="icon ion-chatbubbles" ui-sref="loggedIn.messages">
+  <ion-tab icon="icon ion-chatbubbles" ui-sref="loggedIn.messages">
     <ion-nav-view name="messages"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Events" icon="icon ion-calendar" ui-sref="loggedIn.events">
+  <ion-tab icon="icon ion-calendar" ui-sref="loggedIn.events">
     <ion-nav-view name="events"></ion-nav-view>
   </ion-tab>
 
