--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -1,10 +1,18 @@
 /* Empty. Add your own CSS if you like */
+
+.item-options {
+    width: 100% !important;
+}
+
+.col-33 {
+    width: 33.3333%;
+}
 .main-logo.button-icon.icon:before {
     font-size: 144px;
     line-height: 144px;
 }
 
-.lrg-font.button-icon.icon:before{
+.lrg-font.button-icon.icon:before, .lrg-font.icon, .lrg-font.icon:before{
     font-size: 55px;
     line-height: 55px;
 }
@@ -29,4 +37,12 @@
 
 .lrg-margin-top {
     margin-top: 30px;
+}
+
+.xlrg-margin-top {
+    margin-top: 50px;
+}
+
+.sm-line-height {
+    line-height: 5px;   
 }
