--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -1,9 +1,47 @@
 <ion-nav-bar class="bar-dark nav-title-slide-ios7">
-    <button class="button button-icon icon ion-gear-a"></button>
+    <button ng-click="openModal()" class="button button-icon icon ion-gear-a"></button>
 </ion-nav-bar>
 
 <ion-view title="Dashboard">
   <ion-content class="has-header padding">
-    
+      
+    <script id="settings.html" type="text/ng-template">
+        <div class="modal">
+            <header class="bar bar-header bar-dark">
+                <div class="button button-clear" ng-click="modal.hide()"><span class="icon ion-chevron-left"></span></div>
+                <h1 class="title">Settings</h1>
+            </header>
+            <ion-content class="has-header">
+                <ion-list>
+                    <a class="item item-icon-left" href="#">
+                        <i class="icon ion-ionic"></i>
+                        Account Info
+                    </a>
+                    <li class="item item-toggle">
+                        Notifications
+                        <label class="toggle toggle-assertive">
+                            <input type="checkbox">
+                            <div class="track">
+                                <div class="handle"></div>
+                            </div>
+                        </label>
+                    </li>
+                    <a class="item item-icon-left" href="#">
+                        <i class="icon ion-ionic"></i>
+                        Social Accounts
+                    </a>
+                    <a class="item item-icon-left" href="#">
+                        <i class="icon ion-ionic"></i>
+                        Terms of Service
+                    </a>
+                    <a class="item item-icon-left" href="#">
+                        <i class="icon ion-ionic"></i>
+                        Logout
+                    </a>
+                </ion-list>
+            </ion-content>
+        </div>
+    </script>
   </ion-content>
 </ion-view>
+
