--- a/app/www/templates/events.html
+++ b/app/www/templates/events.html
@@ -1,3 +1,6 @@
+<ion-nav-bar class="bar-dark nav-title-slide-ios7">
+</ion-nav-bar>
+
 <ion-view title="Events">
   <ion-content class="has-header">
     <ion-list>
