--- a/app/www/templates/login.html
+++ b/app/www/templates/login.html
@@ -4,11 +4,11 @@
 </ion-nav-bar>
 
 <ion-view title="Login">
-  <ion-content class="has-header">
+  <ion-content class="has-header padding">
     <div class="row text-center">
         <div class="col"><a class="button h1 button-icon icon ion-location main-logo"></a></div>
       </div>
-      <div class="list lrg-margin-top">
+      <div class="list list-inset lrg-margin-top">
           <label class="item item-input sm-margin-top">
             <input type="text" placeholder="username">
           </label>
@@ -16,7 +16,7 @@
             <input type="text" placeholder="password">
           </label>
       </div>
-      <button ui-sref="loggedIn.dashboard" class="button button-full button-positive sm-margin-top">login</button>
+      <button ui-sref="loggedIn.dashboard" class="button button-block button-positive sm-margin-top">login</button>
       <div class="row">
         <div class="col text-left"><input type="checkbox">remember me</div>
         <div class="col text-right"><a ui-sref="signup">signup</a></div>
