--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -1,5 +1,5 @@
 <ion-nav-bar class="bar-dark nav-title-slide-ios7">
-    <button ng-click="openModal()" class="button button-icon icon ion-gear-a"></button>
+    <button ng-click="openModal()" class="button button-icon icon ion-ios7-gear"></button>
 </ion-nav-bar>
 
 <ion-view title="Dashboard">
