--- a/app/www/templates/main.html
+++ b/app/www/templates/main.html
@@ -1,17 +1,17 @@
-<ion-content scroll="false">
+<ion-content class="padding" scroll="false">
     <div class="row text-center">
       <div class="col"><a class="button h1 button-icon icon ion-location main-logo"></a></div>
     </div>
-    <button class="button button-full button-positive">
+    <button ng-click="facebookLogin()" class="button button-block button-positive">
       <i class="icon icon-left ion-social-facebook-outline"></i> Login with Facebook
     </button>
-    <button class="button button-full button-calm">
+    <button class="button button-block button-calm">
       <i class="icon icon-left ion-social-twitter-outline"></i> Login with Twitter
     </button>
-    <button class="button button-full button-assertive">
+    <button class="button button-block button-assertive">
       <i class="icon icon-left ion-social-googleplus-outline"></i> Login with Google+
     </button>
-    <button ui-sref="login" class="button button-full button-dark">
+    <button ui-sref="login" class="button button-block button-dark">
       <i class="icon icon-left ion-location"></i> Login with Comrade
     </button>
     
