--- a/app/www/templates/signup.html
+++ b/app/www/templates/signup.html
@@ -4,14 +4,16 @@
 </ion-nav-bar>
 
 <ion-view title="Signup">
-  <ion-content class="has-header">
-      <div class="list lrg-margin-top">
-          <label class="item item-input sm-margin-top">
-            <input type="text" placeholder="First Name">
-          </label>
-          <label class="item item-input sm-margin-top">
-            <input type="text" placeholder="Last Name">
-          </label>
+  <ion-content class="has-header padding">
+      <div class="list list-inset lrg-margin-top">
+          <div class="row">
+              <label class="item col item-input sm-margin-top">
+                <input type="text" placeholder="First Name">
+              </label>
+              <label class="item col item-input sm-margin-top">
+                <input type="text" placeholder="Last Name">
+              </label>
+          </div>
           <label class="item item-input sm-margin-top">
             <input type="text" placeholder="email">
           </label>
@@ -22,6 +24,6 @@
             <input type="text" placeholder="password">
           </label>
       </div>
-      <button class="button button-full button-positive sm-margin-top">signup</button>
+      <button class="button button-block button-positive sm-margin-top">signup</button>
   </ion-content>
 </ion-view>
