Login Signup and Linking Social Account
Created the basic API without production quality security, again I’m
going to build the base of the app and work on security when i win
59DaysOfCode

--- a/app/www/templates/login.html
+++ b/app/www/templates/login.html
@@ -4,25 +4,27 @@
 </ion-nav-bar>
 
 <ion-view title="Login">
-  <ion-content class="has-header padding">
-    <div class="row text-center">
-        <div class="col"><a class="button h1 button-icon icon ion-location main-logo"></a></div>
-      </div>
-      <div class="list list-inset lrg-margin-top">
-          <label class="item item-input sm-margin-top">
-            <input type="text" placeholder="username">
-          </label>
-          <label class="item item-input sm-margin-top">
-            <input type="text" placeholder="password">
-          </label>
-      </div>
-      <button ui-sref="loggedIn.dashboard" class="button button-block button-positive sm-margin-top">login</button>
-      <div class="row">
-        <div class="col text-left"><input type="checkbox">remember me</div>
-        <div class="col text-right"><a ui-sref="signup">signup</a></div>
-      </div>
-      <div class="row">
-        <div class="col text-right"><a >forgot password</a></div>
-      </div>
-  </ion-content>
+    <ion-content class="has-header padding">
+        <div class="row text-center">
+            <div class="col"><a class="button h1 button-icon icon ion-location main-logo"></a></div>
+        </div>
+        <form name="loginForm" ng-submit="login(loginData)" novalidate>
+            <div class="list list-inset lrg-margin-top">
+                <label class="item item-input sm-margin-top">
+                    <input type="text" placeholder="email" name="email" ng-model="loginData.email">
+                </label>
+                <label class="item item-input sm-margin-top">
+                    <input type="text" placeholder="password" name="password" ng-model="loginData.password">
+                </label>
+            </div>
+            <button type="submit" class="button button-block button-positive sm-margin-top">login</button>
+        </form>
+        <div class="row">
+            <div class="col text-left"><input type="checkbox">remember me</div>
+            <div class="col text-right"><a ui-sref="signup">signup</a></div>
+        </div>
+        <div class="row">
+            <div class="col text-right"><a >forgot password</a></div>
+        </div>
+    </ion-content>
 </ion-view>
