Trying out HelloJS
Previously we have been using a method i created for showing the Social
Media Authentication Dialog window where the user logs in and we
retrieve access token. However i believe HelloJS will solve the pain of
the basic sites we need to implement and then we can worry about the
more niche social sites after 59DaysOfCode. Also got rid of attempt at
storing the users social media accounts in a JSON format and went with
a more static approach, i can find a more dynamic way to do this after
59DaysOfCode.

--- a/app/www/templates/main.html
+++ b/app/www/templates/main.html
@@ -5,10 +5,10 @@
     <button ng-click="facebookLogin()" class="button button-block button-positive">
       <i class="icon icon-left ion-social-facebook-outline"></i> Login with Facebook
     </button>
-    <button class="button button-block button-calm">
+    <button ng-click="socialLogin('twitter')" class="button button-block button-calm">
       <i class="icon icon-left ion-social-twitter-outline"></i> Login with Twitter
     </button>
-    <button class="button button-block button-assertive">
+    <button ng-click="socialLogin('google')" class="button button-block button-assertive">
       <i class="icon icon-left ion-social-googleplus-outline"></i> Login with Google+
     </button>
     <button ui-sref="login" class="button button-block button-dark">
