--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -34,7 +34,7 @@
                         <i class="icon ion-ionic"></i>
                         Terms of Service
                     </a>
-                    <a class="item item-icon-left" href="#">
+                    <a class="item item-icon-left" href="#" ng-click="socialLogout('google')">
                         <i class="icon ion-ionic"></i>
                         Logout
                     </a>
