--- a/app/www/templates/main.html
+++ b/app/www/templates/main.html
@@ -2,7 +2,7 @@
     <div class="row text-center">
       <div class="col"><a class="button h1 button-icon icon ion-location main-logo"></a></div>
     </div>
-    <button ng-click="facebookLogin()" class="button button-block button-positive">
+    <button ng-click="socialLogin('facebook')" class="button button-block button-positive">
       <i class="icon icon-left ion-social-facebook-outline"></i> Login with Facebook
     </button>
     <button ng-click="socialLogin('twitter')" class="button button-block button-calm">
