Added UserSession controller
Added a UserSession controller to store the users data thats held on
our servers. Added test variable on dashboard and added some well
thought out security sollutions to the login system and logging in with
a social account. Previously if someone was able to get ahold of even
one of a users social media accounts or even register someone for a
social account they may not have registered under there email. they
could use that account to login with Comrade and all of a sudden that
hacker would have access to ALL of there other social media accounts.
This is bad and we have developed 2 solid methods to prevent this from
happening. 1 of those methods has been implemented in this commit.

--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -4,7 +4,7 @@
 
 <ion-view title="Dashboard">
   <ion-content class="has-header padding">
-      
+    <h1>{{UserData.firstName}}</h1>
     <script id="settings.html" type="text/ng-template">
         <div class="modal">
             <header class="bar bar-header bar-dark">
