--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -60,7 +60,7 @@
                     <i class="icon ion-ionic"></i>
                     Terms of Service
                 </a>
-                <a class="item item-icon-left" href="#" ng-click="socialLogout()">
+                <a class="item item-icon-left" href="#" ng-click="logout()">
                     <i class="icon ion-ionic"></i>
                     Logout
                 </a>
