Lots of good stuff
Moved Hello.init to index
Social support now included Facebook Twitter and Google with all
responses.
Grabs friends list now, but does not populate list view yet, just grabs
friends from the API, and only Facebook right now, adding others today.
Added uniqueness to all social ID stored in the server
Now using proper Proxy support for Twitter and LinkedIn

--- a/app/www/templates/main.html
+++ b/app/www/templates/main.html
@@ -11,6 +11,9 @@
     <button ng-click="socialLogin('google')" class="button button-block button-assertive">
       <i class="icon icon-left ion-social-googleplus-outline"></i> Login with Google+
     </button>
+    <button ng-click="socialLogin('linkedin')" class="button button-block button-assertive">
+        <i class="icon icon-left ion-social-linkedin-outline"></i> Login with LinkedIn
+    </button>
     <button ui-sref="login" class="button button-block button-dark">
       <i class="icon icon-left ion-location"></i> Login with Comrade
     </button>
