Committing to switch development machines
Switching to the desktop to develop, the laptop is cutting it anymore
lol.

--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -7,6 +7,7 @@
         <button ng-show="socialStatus('facebook')" ng-click="filterSocial('facebook')" class="button button-icon icon ion-social-facebook-outline"></button>
         <button ng-show="socialStatus('google')" ng-click="filterSocial('google')" class="button button-icon icon ion-social-googleplus-outline"></button>
         <button ng-show="socialStatus('twitter')" ng-click="filterSocial('twitter')" class="button button-icon icon ion-social-twitter-outline"></button>
+        <button ng-show="socialStatus('linkedin')" ng-click="filterSocial('linkedin')" class="button button-icon icon ion-social-linkedin-outline"></button>
         <button ng-click="linkSocialAccount()" class="button button-icon icon ion-ios7-plus-empty"></button>
     </div>
     <div class="has-subheader social-bubble-holder">
