--- a/app/www/templates/dashboard.html
+++ b/app/www/templates/dashboard.html
@@ -8,7 +8,7 @@
         <button ng-show="socialStatus('google')" ng-click="filterSocial('google')" class="button button-icon icon ion-social-googleplus-outline"></button>
         <button ng-show="socialStatus('twitter')" ng-click="filterSocial('twitter')" class="button button-icon icon ion-social-twitter-outline"></button>
         <button ng-show="socialStatus('linkedin')" ng-click="filterSocial('linkedin')" class="button button-icon icon ion-social-linkedin-outline"></button>
-        <button ng-click="linkSocialAccount()" class="button button-icon icon ion-ios7-plus-empty"></button>
+        <button ng-click="openLinkMoreModal()" class="button button-icon icon ion-ios7-plus-empty"></button>
     </div>
     <div class="has-subheader social-bubble-holder">
 
@@ -80,6 +80,40 @@
         <ion-content>
             <ion-list>
 
+            </ion-list>
+        </ion-content>
+    </div>
+</script>
+
+<script id="linkanothersocialaccount.html" type="text/ng-template">
+    <div class="modal">
+        <ion-header-bar>
+            <button ng-click="closeLinkMoreModal()" class="button button-clear icon ion-chevron-left"></button>
+            <h1 class="title">Add More Accounts</h1>
+
+        </ion-header-bar>
+        <ion-content>
+            <ion-list>
+                <ion-item class="item item-icon-right" ng-click="linkSocialAccount('facebook')">
+                    Facebook
+                    <i class="icon ion-social-facebook"></i>
+                </ion-item>
+                <ion-item class="item item-icon-right" ng-click="linkSocialAccount('google')">
+                    Google+
+                    <i class="icon ion-social-googleplus"></i>
+                </ion-item>
+                <ion-item class="item item-icon-right" ng-click="linkSocialAccount('twitter')">
+                    Twitter
+                    <i class="icon ion-social-twitter"></i>
+                </ion-item>
+                <ion-item class="item item-icon-right" ng-click="linkSocialAccount('linkedin')">
+                    LinkedIn
+                    <i class="icon ion-social-linkedin"></i>
+                </ion-item>
+                <ion-item class="item item-icon-right" ng-click="linkSocialAccount('windows')" >
+                    Windows Live
+                    <i class="icon ion-social-windows"></i>
+                </ion-item>
             </ion-list>
         </ion-content>
     </div>
