--- a/backend/views/homepage.ejs
+++ b/backend/views/homepage.ejs
@@ -24,7 +24,7 @@ setTimeout(function sunrise () {
                     <div class="sprite one"></div>
                     <h3>Generate a REST API.</h3>
                     <p>
-                        Run <code>sails generate api user</code>.  This will create two files: a <a href="http://links.sailsjs.org/docs/models">model</a> <code class="pocket">api/models/User.js</code> and a <a href="http://links.sailsjs.org/docs/controllers">controller</a><code class="pocket">api/controllers/UserController.js</code>.
+                        Run <code>sails generate api users</code>.  This will create two files: a <a href="http://links.sailsjs.org/docs/models">model</a> <code class="pocket">api/models/Users.js</code> and a <a href="http://links.sailsjs.org/docs/controllers">controller</a><code class="pocket">api/controllers/UsersController.js</code>.
                     </p>
                 </div>
             </li>
@@ -35,7 +35,7 @@ setTimeout(function sunrise () {
                         Lift your app.
                     </h3>
                     <p>
-                        Run <code>sails lift</code> to start up your app server.  If you visit <a target="_blank" href="http://localhost:1337/user"><code>http://localhost:1337/user</code></a> in your browser, you'll see a <a href="http://links.sailsjs.org/docs/blueprints">WebSocket-compatible</a> user API.
+                        Run <code>sails lift</code> to start up your app server.  If you visit <a target="_blank" href="http://localhost:1337/users"><code>http://localhost:1337/users</code></a> in your browser, you'll see a <a href="http://links.sailsjs.org/docs/blueprints">WebSocket-compatible</a> users API.
                     </p>
                 </div>
             </li>
