--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -56,6 +56,13 @@
     position: relative;
 }
 
+.social-bubble {
+    border-radius: 100%;
+    width: 80px;
+    height: 80px;
+    margin-top: 20px;
+}
+
 .force-relative {
     position: relative;
 }
