added search bar
added search bar styling, ngAnimate module and added filter to actually
carry our search function

--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -67,3 +67,11 @@
     position: relative;
 }
 /* END Dashboard Custom Styles */
+
+.bar-search {
+    height: 50px;
+}
+
+.bar-search {
+    margin-top: 88px;
+}
