Twitter DirectMessages, localStorage and checks
Edited Twitter DirectMessage API call to push each message into the
array and store in localStorage. Also added better check (true/false)
method to see which social accounts are added. Which is used to call to
the respective endpoints accordingly depending on if that social
account is  added.

--- a/app/www/templates/comrades.html
+++ b/app/www/templates/comrades.html
@@ -2,10 +2,9 @@
     <ion-nav-bar class="bar-dark nav-title-slide-ios7">
     </ion-nav-bar>
     <div class="bar bar-subheader">
-        <button ng-show="socialStatus('facebook')" ng-click="filterSocial('facebook')" class="button button-icon icon ion-social-facebook-outline"></button>
-        <button ng-show="socialStatus('google')" ng-click="filterSocial('google')" class="button button-icon icon ion-social-googleplus-outline"></button>
-        <button ng-show="socialStatus('twitter')" ng-click="filterSocial('twitter')" class="button button-icon icon ion-social-twitter-outline"></button>
-        <button ng-show="socialStatus('linkedin')" ng-click="filterSocial('linkedin')" class="button button-icon icon ion-social-linkedin-outline"></button>
+        <button ng-show="{{hasFacebook}}" ng-click="filterSocial('facebook')" class="button button-icon icon ion-social-facebook-outline"></button>
+        <button ng-show="{{hasGoogle}}" ng-click="filterSocial('google')" class="button button-icon icon ion-social-googleplus-outline"></button>
+        <button ng-show="{{hasTwitter}}" ng-click="filterSocial('twitter')" class="button button-icon icon ion-social-twitter-outline"></button>
         <button ng-click="search = !search" class="button button-icon icon ion-ios7-search"></button>
     </div>
     <div ng-show="search" class="bar-search" data-ng-animate="'fade'">
