--- a/app/www/templates/comrades.html
+++ b/app/www/templates/comrades.html
@@ -24,7 +24,7 @@
                 <!--
                     Diplayed after swipe/reveal
                 -->
-                <ion-option-button ng-show="isComrade({{comrade.id}})" class="button-info sm-line-height col-33" ng-click="">
+                <ion-option-button ng-show="isComrade({{comrade.id}})" class="button-info sm-line-height col-33" ui-sref="loggedIn.chatRoom({id:{{comrade.id}}})">
                     <i class="icon lrg-font ion-ios7-chatbubble-outline"></i><br>
                     Chat
                 </ion-option-button>
