--- a/client/www/templates/dashboard.html
+++ b/client/www/templates/dashboard.html
@@ -35,7 +35,7 @@
             <ion-list>
                 <a class="item item-icon-left" href="#">
                     <i class="icon ion-ios7-person-outline"></i>
-                    Account Info
+                    Account Info (coming soon)
                 </a>
                 <li class="item item-icon-left item-toggle">
                     <i class="icon ion-ios7-alarm-outline"></i>
@@ -69,18 +69,18 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item ng-show="{{hasFacebook}}" class="item item-icon-right" ng-click="linkSocialAccount('facebook')">
+                <ion-toggle ng-model="hasFacebook" ng-show="{{hasFacebook}}" toggle-class="toggle-calm" ng-change="change(hasFacebook)" ng-true-value="true" ng-false-value="false">
                     Facebook
                     <i class="icon ion-social-facebook"></i>
-                </ion-item>
-                <ion-item ng-show="{{hasGoogle}}" class="item item-icon-right" ng-click="linkSocialAccount('google')">
+                </ion-toggle>
+                <ion-toggle ng-model="hasGoogle" ng-show="{{hasGoogle}}" toggle-class="toggle-calm" ng-change="change(hasGoogle)">
                     Google+
                     <i class="icon ion-social-googleplus"></i>
-                </ion-item>
-                <ion-item ng-show="{{hasTwitter}}" class="item item-icon-right" ng-click="toggleSocialAccount('twitter')">
+                </ion-toggle>
+                <ion-toggle ng-model="hasTwitter" ng-show="{{hasTwitter}}" toggle-class="toggle-calm" ng-change="change(hasTwitter)">
                     Twitter
                     <i class="icon ion-social-twitter"></i>
-                </ion-item>
+                </ion-toggle>
             </ion-list>
         </ion-content>
     </div>
