App Design added
Added concept design to the app, very basic gradients simple clean and
not distracting. Not completed, just committing nights work. Took 3
days off of coding to relax my brain and warming it back up with some
design.

--- a/client/www/templates/loggedIn.html
+++ b/client/www/templates/loggedIn.html
@@ -3,7 +3,7 @@
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
 -->
-<ion-tabs id="main-tabs" class="tabs-dark tabs-icon-only">
+<ion-tabs id="main-tabs" class="comradeGradient tabs-icon-only">
 
   <ion-tab icon="icon ion-ios7-home-outline" icon-off="ion-ios7-home-outline" icon-on="ion-ios7-home" ui-sref="loggedIn.dashboard">
     <ion-nav-view name="dashboard"></ion-nav-view>
